--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,12 +2,12 @@
     "compilerOptions": {
         "allowJs": false,
         "strict": true,
-        "module": "commonjs",
+        "module": "ESNext",
         "target": "ES2022",
         "allowUnreachableCode": false,
         "allowUnusedLabels": false,
         "isolatedModules": true,
-        "moduleResolution": "node",
+        "moduleResolution": "bundler",
         "noEmit": false,
         "forceConsistentCasingInFileNames": true,
         "declaration": true,
