--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "main": "lib/index.js",
     "scripts": {
         "build": "tsc",
-        "test": "tsx --test tests/**/*.test.ts"
+        "test": "tsx --test tests/**/*.test.ts",
+        "start": "tsx src/index.ts"
     },
     "devDependencies": {
         "@types/node": "^24.3.0",
